# AI-options-trading-advisor-on-the-Bybit-exchange

./: .coverage  .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  CHECK_ADMIN.sh  Dockerfile  NOTES.md  README.md  SYSTEM_REQUIREMENTS.md  api_server.py  check_env.sh  config.py  data_store.py  docker-compose.yml  get_info_ticker.py  main.py  main_agent.py  monitor.py  pyproject.toml  research.ipynb  telegram_bot.py  test_env_in_container.sh  testing.ipynb  underlying_history_03_02_26.csv  utils.py  websocket_manager.py
core/agent/: __init__.py  decision_engine.py  prompt_templates.py  trading_agent.py
core/data/: __init__.py  database.py  historical_analyzer.py  option_board.py
core/strategy/: __init__.py  anomaly_detector.py  dynamic_thresholds.py  entry_checklist.py  gex_calculator.py  greeks_analyzer.py  iv_filter.py
data/: options.db
geted_data/: strategy_thresholds_03_02_26.csv
scripts/: fix_is_otm.py
services/: api_server.py  data_store.py  telegram_bot.py  websocket_manager.py
static/: admin.html
tests/: README.md  __init__.py  conftest.py
tests/historical/: __init__.py  test_backtest.py  test_signal_quality.py
tests/integration/: test_agent_workflow.py  test_decision_engine.py  test_trading_agent.py
tests/unit/: test_anomaly_detector.py  test_data_store.py  test_database.py  test_decision_engine_agent_dte.py  test_greeks_analyzer.py  test_historical_analyzer.py  test_iv_filter.py  test_option_board.py
utils/: __init__.py  log_buffer.py  logging_config.py
