[project]
name = "bot-option"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "pandas>=2.2.3",
    "pybit>=5.13.0",
    "python-telegram-bot[job-queue]>=22.5",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "websocket-client>=1.9.0",
    "websockets==12.0",
]
