[project]
name = "bot-option"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "openai>=1.0.0",
    "pandas>=2.2.3",
    "pybit>=5.13.0",
    "python-telegram-bot[job-queue]>=22.5",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "websocket-client>=1.9.0",
    "websockets==12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "faker>=22.0.0",
]
